# CWF

./: CMakeLists.txt
MAIN/: main.cpp
include/BGAL/Optimization/GradientDescent/: GradientDescent.h
include/BGAL/Optimization/LBFGS/: LBFGS.h
src/Algorithm/: CMakeLists.txt
src/BaseShape/: CMakeLists.txt
src/CVTLike/: CMakeLists.txt  CVT.cpp
src/Draw/: CMakeLists.txt
src/Geodesic/: CMakeLists.txt
src/Integral/: CMakeLists.txt
src/Model/: CMakeLists.txt
src/Optimization/: CMakeLists.txt
src/PQP/: CMakeLists.txt
src/PointCloudProcessing/: CMakeLists.txt
src/Reconstruction/: CMakeLists.txt
src/Tessellation2D/: CMakeLists.txt
src/Tessellation3D/: CMakeLists.txt
